--- a/task_2_kyril_sentiment.ipynb
+++ b/task_2_kyril_sentiment.ipynb
@@ -780,6 +780,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use tokenize function to ignore too long \n",
+    "# Define stopwords and punctuation\n",
+    "#stop_words = set(stopwords.words('english'))\n",
+    "#punctuation = set(string.punctuation)\n",
+    "\n",
+    "def clean_tokens(text : str, lem : bool = False, pos_arg={\"VERB\":'v', \"ADJ\":'a', \"ADV\":'r', \"NOUN\":'n'}) -> List:\n",
+    "    \n",
+    "    # Tokenize the text\n",
+    "    token = word_tokenize(text.lower())\n",
+    "    # Remove unwanted punctuation and stop words\n",
+    "    # if extra_clean == True:\n",
+    "    #    tokens = [word for word in tokens if (word not in punctuation and word not in stop_words)]\n",
+    "\n",
+    "    if lem == True:\n",
+    "        \n",
+    "        output = []\n",
+    "        \n",
+    "        for w, pos in nltk.pos_tag(token, tagset=\"universal\"):\n",
+    "            pos = pos_arg[pos] if pos in pos_arg.keys() else 'n'\n",
+    "            lem = wnl.lemmatize(w, pos=pos)\n",
+    "\n",
+    "            if lem not in stopwords:\n",
+    "                output.append(lem)\n",
+    "    \n",
+    "        return output\n",
+    "\n",
+    "    return token"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [
@@ -817,6 +852,7 @@
    ],
    "source": [
     "reviews_list = df_data_res['text'].to_list()\n",
+    "reviews_list = [review in reviews_list if len(tokenize(reviews)) < 512]\n",
     "df_sentiment = pd.DataFrame(sent_pipe(reviews_list))\n",
     "# Apply "
    ]
