--- a/task_2_kyril_sentiment.ipynb
+++ b/task_2_kyril_sentiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "(123414, 10)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,17 +667,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-18 20:05:00.250710: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 93763584 exceeds 10% of free system memory.\n",
-      "2024-05-18 20:05:00.343153: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 93763584 exceeds 10% of free system memory.\n",
-      "2024-05-18 20:05:00.362928: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 93763584 exceeds 10% of free system memory.\n",
-      "2024-05-18 20:05:01.830236: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 93763584 exceeds 10% of free system memory.\n",
+      "2024-05-18 20:39:53.802881: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 93763584 exceeds 10% of free system memory.\n",
+      "2024-05-18 20:39:53.900150: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 93763584 exceeds 10% of free system memory.\n",
+      "2024-05-18 20:39:53.918314: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 93763584 exceeds 10% of free system memory.\n",
+      "2024-05-18 20:39:55.187959: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 93763584 exceeds 10% of free system memory.\n",
       "All PyTorch model weights were used when initializing TFDistilBertForSequenceClassification.\n",
       "\n",
       "All the weights of TFDistilBertForSequenceClassification were initialized from the PyTorch model.\n",
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "6  POSITIVE  0.997672"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,19 +806,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5134/684812199.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_9277/792970574.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_data_res['text_tokens'] = text_tokens\n"
+      "  df_data_res['text_tokens']  = df_data_res['text'].apply(clean_tokens)\n",
+      "/tmp/ipykernel_9277/792970574.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_data_res['tokens_count'] = df_data_res['text_tokens'].apply(len)\n"
      ]
     }
    ],
@@ -829,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,27 +843,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "It is possible to reduce the size of the too big reviews using a text2text pretrained model. \n",
+    "Exemple bellow uses pytorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error : No module named 'torch'\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Generate smaller text from bigger text using transformer tokenizer\"\"\"\n",
-    "model_name = \"allenai/led-large-16384-arxiv\"\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "model = AutoModelForSeq2SeqLM.from_pretrained(model_name)\n",
     "\n",
-    "pipe = pipeline(\"text2text-generation\", model=model, tokenizer=tokenizer, device=0)\n",
+    "try: \n",
+    "    import torch \n",
+    "    \n",
+    "    model_name = \"allenai/led-large-16384-arxiv\"\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "    model = AutoModelForSeq2SeqLM.from_pretrained(model_name)\n",
+    "    \n",
+    "    pipe = pipeline(\"text2text-generation\", model=model, tokenizer=tokenizer, device=0)\n",
     "\n",
-    "long_text = \"Replace by what you want.\"\n",
-    "generated_text = pipe(\n",
-    "    long_text, \n",
-    "    truncation=True, \n",
-    "    max_length=256, \n",
-    "    no_repeat_ngram_size=5, \n",
-    "    num_beams=3, \n",
-    "    early_stopping=True\n",
-    "    )"
+    "    \n",
+    "    def generate_smaller_text(text : str, length : int = 64) -> str:\n",
+    "        generated_text = pipe(\n",
+    "            text, \n",
+    "            truncation=True, \n",
+    "            max_length=length, \n",
+    "            no_repeat_ngram_size=5, \n",
+    "            num_beams=3, \n",
+    "            early_stopping=True\n",
+    "        )\n",
+    "\n",
+    "except ImportError as e:\n",
+    "    print(\"Error : {}\".format(e))\n",
+    "    "
    ]
   },
   {
