Single dataset to use by all

--- a/task_2.0_DataSetup.ipynb
+++ b/task_2.0_DataSetup.ipynb
@@ -63,12 +63,12 @@
     "- **hours:** cast as dictionary; converted to list of list of working hours per day of the week. Each row has a list size 7, representing the work day and each index have a list of size 2 repsenting the working hour of the day ast [start h, end h]. If a business doens't operate a specific day we put [-1,-1] as working hour.\n",
     "- **categories:** converted from comma seperated string to list of categories  \n",
     "\n",
-    "After cleaning and selection, we merge business data with ratings data. We only keep the columns that are of our interest for the future usage. We save this dataset and use it for the future tasks."
+    "After cleaning and selection, we merge business data with ratings data. We only keep the columns that are of our interest for the future usage. Since we are only interested in the restaurant businesses in Philadelphia, we further trim our dataset to contain only the restaurant businesses. We do that by selecting rows those category list includes restaurants. After our many observations we concluded that such a selection criteria is enough to identify the vast majority of restaurant businesses in Philadelphia."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,8 @@
      "output_type": "stream",
      "text": [
       "Philadelphia businesses data (19707, 15)\n",
-      "Philadelphia businesses wiht ratings data (176549, 15)\n"
+      "Philadelphia businesses with ratings data (176549, 15)\n",
+      "Philadelphia restaurant businesses with ratings data (123414, 15)\n"
      ]
     },
     {
@@ -256,7 +257,7 @@
        "4  This is my favorite bakery in Chinatown! It's ...  2017-09-13 00:38:08  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,10 +269,23 @@
     "df_data = pd.merge(df_business_ph[['business_id', 'postal_code_int', 'attributes_list', 'hours_list', 'categories_list', 'latitude', 'longitude']],\n",
     "                   df_Train_reviews, left_on= 'business_id', right_on='business_id')\n",
     "\n",
-    "print(\"Philadelphia businesses wiht ratings data\", df_data.shape)\n",
-    "df_data.to_parquet('data/ATML2024_Task2_PhiliBussRatings.parquet')\n",
-    "df_data.head(5)"
+    "print(\"Philadelphia businesses with ratings data\", df_data.shape)\n",
+    "\n",
+    "df_data_res = df_data[df_data['categories_list'].apply(lambda x: any('restaurants' in str(a).lower() for a in x)\n",
+    "                       or any('restaurant' in str(a).lower() for a in x))]\n",
+    "\n",
+    "print(\"Philadelphia restaurant businesses with ratings data\", df_data_res.shape)\n",
+    "\n",
+    "df_data_res.to_parquet('data/ATML2024_Task2_PhiliBussRatings.parquet')\n",
+    "df_data_res.head(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
