Many analysis run and combined

--- a/task_2.0_DataSetup.ipynb
+++ b/task_2.0_DataSetup.ipynb
@@ -271,6 +271,8 @@
     "\n",
     "print(\"Philadelphia businesses with ratings data\", df_data.shape)\n",
     "\n",
+    "\n",
+    "# Select only restaurant businesses\n",
     "df_data_res = df_data[df_data['categories_list'].apply(lambda x: any('restaurants' in str(a).lower() for a in x)\n",
     "                       or any('restaurant' in str(a).lower() for a in x))]\n",
     "\n",
