--- a/task_2.0_DataSetup.ipynb
+++ b/task_2.0_DataSetup.ipynb
@@ -2,19 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import ast as ast\n",
-    "import numpy as np\n",
     "from typing import *\n",
-    "import regex as re\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from task_2_helpers import *\n",
-    "from collections import Counter"
+    "from task_2_helpers import *\n"
    ]
   },
   {
@@ -28,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +118,7 @@
        "      <th>0</th>\n",
        "      <td>wm9eoqjytVbC7dQcM4WSTM</td>\n",
        "      <td>19107.0</td>\n",
-       "      <td>[alcohol, bikeparking, businessacceptscreditca...</td>\n",
+       "      <td>[Alcohol, BikeParking, BusinessAcceptsCreditCa...</td>\n",
        "      <td>[[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...</td>\n",
        "      <td>[bakeries, bubble tea, coffee &amp; tea, food, res...</td>\n",
        "      <td>39.955505</td>\n",
@@ -141,7 +136,7 @@
        "      <th>1</th>\n",
        "      <td>wm9eoqjytVbC7dQcM4WSTM</td>\n",
        "      <td>19107.0</td>\n",
-       "      <td>[alcohol, bikeparking, businessacceptscreditca...</td>\n",
+       "      <td>[Alcohol, BikeParking, BusinessAcceptsCreditCa...</td>\n",
        "      <td>[[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...</td>\n",
        "      <td>[bakeries, bubble tea, coffee &amp; tea, food, res...</td>\n",
        "      <td>39.955505</td>\n",
@@ -159,7 +154,7 @@
        "      <th>2</th>\n",
        "      <td>wm9eoqjytVbC7dQcM4WSTM</td>\n",
        "      <td>19107.0</td>\n",
-       "      <td>[alcohol, bikeparking, businessacceptscreditca...</td>\n",
+       "      <td>[Alcohol, BikeParking, BusinessAcceptsCreditCa...</td>\n",
        "      <td>[[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...</td>\n",
        "      <td>[bakeries, bubble tea, coffee &amp; tea, food, res...</td>\n",
        "      <td>39.955505</td>\n",
@@ -177,7 +172,7 @@
        "      <th>3</th>\n",
        "      <td>wm9eoqjytVbC7dQcM4WSTM</td>\n",
        "      <td>19107.0</td>\n",
-       "      <td>[alcohol, bikeparking, businessacceptscreditca...</td>\n",
+       "      <td>[Alcohol, BikeParking, BusinessAcceptsCreditCa...</td>\n",
        "      <td>[[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...</td>\n",
        "      <td>[bakeries, bubble tea, coffee &amp; tea, food, res...</td>\n",
        "      <td>39.955505</td>\n",
@@ -195,7 +190,7 @@
        "      <th>4</th>\n",
        "      <td>wm9eoqjytVbC7dQcM4WSTM</td>\n",
        "      <td>19107.0</td>\n",
-       "      <td>[alcohol, bikeparking, businessacceptscreditca...</td>\n",
+       "      <td>[Alcohol, BikeParking, BusinessAcceptsCreditCa...</td>\n",
        "      <td>[[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...</td>\n",
        "      <td>[bakeries, bubble tea, coffee &amp; tea, food, res...</td>\n",
        "      <td>39.955505</td>\n",
@@ -222,11 +217,11 @@
        "4  wm9eoqjytVbC7dQcM4WSTM          19107.0   \n",
        "\n",
        "                                     attributes_list  \\\n",
-       "0  [alcohol, bikeparking, businessacceptscreditca...   \n",
-       "1  [alcohol, bikeparking, businessacceptscreditca...   \n",
-       "2  [alcohol, bikeparking, businessacceptscreditca...   \n",
-       "3  [alcohol, bikeparking, businessacceptscreditca...   \n",
-       "4  [alcohol, bikeparking, businessacceptscreditca...   \n",
+       "0  [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
+       "1  [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
+       "2  [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
+       "3  [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
+       "4  [Alcohol, BikeParking, BusinessAcceptsCreditCa...   \n",
        "\n",
        "                                          hours_list  \\\n",
        "0  [[7.0, 20.0], [7.0, 20.0], [7.0, 20.0], [7.0, ...   \n",
@@ -257,7 +252,7 @@
        "4  This is my favorite bakery in Chinatown! It's ...  2017-09-13 00:38:08  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,13 +276,6 @@
     "df_data_res.to_parquet('data/ATML2024_Task2_PhiliBussRatings.parquet')\n",
     "df_data_res.head(5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
