--- a/task_2.1_Insight.ipynb
+++ b/task_2.1_Insight.ipynb
@@ -1183,7 +1183,7 @@
     "    df_ft = df_ft.sort_values(by=[\"rating\"], ascending=False)\n",
     "\n",
     "    plt.figure(figsize=(30, 4))\n",
-    "    plt.title(f\"Ratings per group defined as {group}\")\n",
+    "    plt.title(f\"Mean ratings per group defined as {group}\")\n",
     "    sns.barplot(x=\"categories_list\", y=\"rating\", data=df_ft[:20], palette=\"viridis\")\n",
     "    plt.xlabel(\"Category\")\n",
     "    plt.ylabel(\"Rating\")\n",
@@ -1201,7 +1201,7 @@
     "df_postalcode = cuisine_df.groupby([\"categories_list\", \"postal_code_int\"])[\"rating\"].mean().reset_index().sort_values(by='postal_code_int')\n",
     "plt.figure(figsize=(10, 10))\n",
     "sns.heatmap(df_postalcode.pivot(index=\"categories_list\", columns=\"postal_code_int\", values=\"rating\"))\n",
-    "plt.title(\"Average rating per category and postal code\")\n",
+    "plt.title(\"Mean rating per category and postal code\")\n",
     "plt.xlabel(\"Postal code\")\n",
     "plt.ylabel(\"categories\")\n",
     "plt.show()"
@@ -1357,7 +1357,7 @@
     "sns.heatmap(df_postalcode.pivot(index=\"categories_list\", columns=\"postal_code_int\", values=\"rating\"))\n",
     "plt.title(\"Average rating per category and postal code\")\n",
     "plt.xlabel(\"Postal code\")\n",
-    "plt.ylabel(\"categories\")\n",
+    "plt.ylabel(\"Categories\")\n",
     "plt.show("
    ]
   },
@@ -1488,9 +1488,9 @@
     "attribute_percentages_df = attribute_percentages.reset_index()\n",
     "attribute_percentages_df.columns = [\"attributes\", \"percentage\"]\n",
     "plt.figure(figsize=(30, 10))\n",
-    "plt.title(\"Distribution of attributes in percentage (top 20)\")\n",
+    "plt.title(\"View on frequency in percentage per attribute (top 20)\")\n",
     "sns.barplot(x=\"attributes\", y=\"percentage\", data=attribute_percentages_df[:20], palette=\"viridis\")\n",
-    "plt.xlabel(\"Attributes\")\n",
+    "plt.xlabel(\"Attribute\")\n",
     "plt.ylabel(\"Percentage\")\n",
     "plt.show()"
    ]
@@ -1511,7 +1511,7 @@
     "plt.title(\"Mean rating per attribute (top 20)\")\n",
     "sns.barplot(x=\"attributes_list\", y=\"rating\", data=mean_ratings[:20], palette=\"viridis\")\n",
     "plt.xlabel(\"Attribute\")\n",
-    "plt.ylabel(\"Mean Rating\")\n",
+    "plt.ylabel(\"Rating\")\n",
     "plt.show()\n",
     "\n"
    ]
@@ -1572,8 +1572,8 @@
     }
    ],
    "source": [
-    "# Keep utility score >= 2\n",
-    "df_data_utility = attribute_individ_df[attribute_individ_df[\"useful\"] >= 2]\n",
+    "# Keep utility score >= 5\n",
+    "df_data_utility = attribute_individ_df[attribute_individ_df[\"useful\"] >= 5]\n",
     "attribute_counts = df_data_utility[\"attributes_list\"].value_counts()\n",
     "attribute_percentages = (attribute_counts / attribute_counts.sum()) * 100\n",
     "\n",
@@ -1581,10 +1581,10 @@
     "mean_ratings = df_data_utility.groupby(\"attributes_list\")[\"rating\"].mean().reset_index()\n",
     "mean_ratings = mean_ratings.sort_values(by=\"rating\", ascending=False)\n",
     "plt.figure(figsize=(30, 10))\n",
-    "plt.title(\"Mean Rating per attribute (top 20)\")\n",
+    "plt.title(\"Mean rating per attribute (top 20)\")\n",
     "sns.barplot(x=\"attributes_list\", y=\"rating\", data=mean_ratings[:20], palette=\"viridis\")\n",
     "plt.xlabel(\"Attribute\")\n",
-    "plt.ylabel(\"Mean Rating\")\n",
+    "plt.ylabel(\"Mean rating\")\n",
     "plt.show()\n",
     "\n",
     "\n",
@@ -1592,7 +1592,7 @@
     "attribute_percentages_df = attribute_percentages.reset_index()\n",
     "attribute_percentages_df.columns = [\"attribute\", \"percentage\"]\n",
     "plt.figure(figsize=(30, 10))\n",
-    "plt.title(\"Distribution of attributes in percentage (top 20)\")\n",
+    "plt.title(\"View of frequency in percentage per attribute (top 20)\")\n",
     "sns.barplot(x=\"attribute\", y=\"percentage\", data=attribute_percentages_df[:20], palette=\"viridis\")\n",
     "plt.xlabel(\"Attribute\")\n",
     "plt.ylabel(\"Percentage\")\n",
@@ -1896,10 +1896,10 @@
     "    df_filt = df_filt.sort_values(by=[\"sentiment\"], ascending=False)\n",
     "\n",
     "    plt.figure(figsize=(30, 4))\n",
-    "    plt.title(f\"Ratings per group as {group}\")\n",
+    "    plt.title(f\"Sentiment score per group as {group}\")\n",
     "    sns.barplot(x=\"categories_list\", y=\"sentiment\", data=df_filt[:20], palette=\"viridis\")\n",
-    "    plt.xlabel(\"category\")\n",
-    "    plt.ylabel(\"Rating\")\n",
+    "    plt.xlabel(\"Category\")\n",
+    "    plt.ylabel(\"Sentiment\")\n",
     "    plt.show()"
    ]
   },
@@ -1927,7 +1927,7 @@
     "sns.heatmap(df_postalcode.pivot(index=\"categories_list\", columns=\"postal_code\", values=\"sentiment\"))\n",
     "plt.title(\"Average sentiment per category and postal code\")\n",
     "plt.xlabel(\"Postal code\")\n",
-    "plt.ylabel(\"categories\")\n",
+    "plt.ylabel(\"Category\")\n",
     "plt.show()"
    ]
   },
@@ -2043,10 +2043,10 @@
     "    df_filt = df_filt.sort_values(by=[\"sentiment\"], ascending=False)\n",
     "\n",
     "    plt.figure(figsize=(30, 4))\n",
-    "    plt.title(f\"Ratings per group as {group}\")\n",
+    "    plt.title(f\"Sentiment score per group as {group}\")\n",
     "    sns.barplot(x=\"categories_list\", y=\"sentiment\", data=df_filt[:20], palette=\"viridis\")\n",
     "    plt.xlabel(\"Category\")\n",
-    "    plt.ylabel(\"Rating\")\n",
+    "    plt.ylabel(\"Sentiment\")\n",
     "    plt.show()"
    ]
   },
@@ -2089,14 +2089,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Compute sentiment analysis per attribute considering the weights given by \"useful\" dimension."
+    "#### Approach 2 - Focus on attributes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We replicate the experience, but for attributes."
+    "We replicate the experience, but for attributes and replicating the same treatment on useful reviews."
    ]
   },
   {
@@ -2210,10 +2210,10 @@
     "    df_filt = df_filt.sort_values(by=[\"sentiment\"], ascending=False)\n",
     "\n",
     "    plt.figure(figsize=(30, 4))\n",
-    "    plt.title(f\"Ratings per group as {group}\")\n",
+    "    plt.title(f\"Sentiment score per group as {group}\")\n",
     "    sns.barplot(x=\"attributes_list\", y=\"sentiment\", data=df_filt[:20], palette=\"viridis\")\n",
-    "    plt.xlabel(\"Attributes\")\n",
-    "    plt.ylabel(\"Rating\")\n",
+    "    plt.xlabel(\"Attribute\")\n",
+    "    plt.ylabel(\"Sentiment\")\n",
     "    plt.show()"
    ]
   },
@@ -2459,8 +2459,8 @@
     "    plt.figure(figsize=(30, 4))\n",
     "    plt.title(f\"Sentiment score per group as {group}\")\n",
     "    sns.barplot(x=\"categories_list\", y=\"sentiment\", data=df_filt[:20], palette=\"viridis\")\n",
-    "    plt.xlabel(\"Attributes\")\n",
-    "    plt.ylabel(\"Sentiment score\")\n",
+    "    plt.xlabel(\"Category\")\n",
+    "    plt.ylabel(\"Sentiment\")\n",
     "    plt.show()\n",
     "\n",
     "\n",
@@ -2690,7 +2690,7 @@
     "    df_filt = df_filt.sort_values(by=[\"rating\"], ascending=False)\n",
     "\n",
     "    plt.figure(figsize=(20, 4))\n",
-    "    plt.title(f\"Mean rating score per group as {group}\")\n",
+    "    plt.title(f\"Mean sentiment score per group as {group}\")\n",
     "    sns.barplot(x=\"categories_list\", y=\"rating\", data=df_filt[:20], palette=\"viridis\")\n",
     "    plt.xlabel(\"Category\")\n",
     "    plt.ylabel(\"Sentiment score\")\n",
@@ -2708,10 +2708,10 @@
     "    df_filt = df_filt.sort_values(by=[\"rating\"], ascending=False)\n",
     "\n",
     "    plt.figure(figsize=(30, 4))\n",
-    "    plt.title(f\"Mean rating score per group: {group}\")\n",
+    "    plt.title(f\"Mean sentiment score per group {group}\")\n",
     "    sns.barplot(x=\"attributes_list\", y=\"rating\", data=df_filt[:20], palette=\"viridis\")\n",
-    "    plt.xlabel(\"Attributes\")\n",
-    "    plt.ylabel(\"Sentiment score\")\n",
+    "    plt.xlabel(\"Attribute\")\n",
+    "    plt.ylabel(\"Sentiment\")\n",
     "    plt.show()"
    ]
   },
@@ -2719,8 +2719,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2.2\n",
-    "## An analysis of the evolution of food trends in the area over time, in terms of consumer preferences. Do the preferences evolve over time, or do they seem stable?"
+    "The results are rather similar to the barplots for attributes seen earlier.\n",
+    "In the group facilities: having wheelchair accessibleand corkage are appreciated.\n",
+    "In the group food: good for meal, reservations and take out, are liked.\n",
+    "In the group service: Dogs allowed and bitcoin acceptance are liked."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.1.3 Conclusion on insights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "Generally speaking, it seems that consumers tend to appreciate things in the same way through filtering. There are some nuances, but they seem negligible when we focus on the top 20 items, considering a rational or sentimental score. \n",
+    "\n",
+    "We note the following trends in the top rankings. These are restaurants associated with relaxation, sociability and open-mindedness. In addition, all services are globally appreciated. In a way, the more the better... in terms of facilities too... \n",
+    "\n",
+    "In order to extract insights, it therefore seems worthwhile to propose a look based on frequencies and heat maps, and on what should rather be avoided. \n",
+    "\n",
+    "This point will be presented in task 2.1.3 as this one focus on what is generally liked by consumers.\n",
+    "\n",
+    "## 2.3\n",
+    "Generally speaking, we can interpret negativity as frustration and unfulfilled needs. As a result, there\"s a chance to be successful in the restaurant business by satisfying unfulfilled needs, and consequently to do good business. To maximize chances of success, one need to target what most consumers are saying by voting. \n",
+    "Here are our pieces of advice:\n",
+    "1) Their focus should not be on what is appreciated, but on avoiding replicating what is not. That seems be more important.\n",
+    "We see from our findings that consumers appreciate all restaurants in general, with the exception of those that are cheap (in terms of quality) or that don't stand out from the crowd (traditional American cuisine). The focus should therefore be on avoiding those items at the bottom of the rankings. An overall comparison of the heat maps shows that low scores are given to foods that tend to be cheap. These tend to be traditional American cuisine, fast food, pizza and buffets for example.\n",
+    "2) To be successful, they need to assess their risk profile and play strategically with zip codes and set up shop where there's high demand and little supply. This requires additional analysis and domain knowledge."
    ]
   },
   {
@@ -2742,7 +2774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can interpret negativity as frustration and unfulfilled needs. As a result, there\"s a chance to be successful in the restaurant business by satisfying unfulfilled needs, and consequently to do good business. To maximize your chances of success, you need to target what most consumers are saying. That\"s why we need to identify what is particularly misjudged in Philadelphia.\n",
+    "\n",
     "\n",
     "Our analysis has shown that the Philadelphia restaurant market: [Findings]...\n",
     "1. General across years\n",
