--- a/task_2.1_Insight.ipynb
+++ b/task_2.1_Insight.ipynb
@@ -458,16 +458,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "split_tokens()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -797,11 +787,22 @@
     "#df_data = pd.concat([df_1, df_2, df_3], ignore_index=True)\n",
     "\n",
     "#To be removed for final run (remove 3 lines) and uncomment the lines before\n",
-    "df_data = pd.read_csv(\"data/df_data_full.csv\", header=0)\n",
-    "df_data['categories_list'] = df_data['categories_list'].apply(ast.literal_eval)\n",
-    "df_data['attributes_list'] = df_data['attributes_list'].apply(ast.literal_eval)\n",
+    "#df_data = pd.read_csv(\"data/df_data_full.csv\", header=0)\n",
+    "#df_data['categories_list'] = df_data['categories_list'].apply(ast.literal_eval)\n",
+    "#df_data['attributes_list'] = df_data['attributes_list'].apply(ast.literal_eval)\n",
     "\n",
-    "df_data.head(10)"
+    "#df_data.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_data = pd.read_csv(\"data/df_data_final.csv\", header=0)\n",
+    "df_data['categories_list'] = df_data['categories_list'].apply(ast.literal_eval)\n",
+    "df_data['attributes_list'] = df_data['attributes_list'].apply(ast.literal_eval)"
    ]
   },
   {
@@ -822,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
