Yet another refactoring

--- a/task_2.1_2.2_Sentiment-FoodTrends.ipynb
+++ b/task_2.1_2.2_Sentiment-FoodTrends.ipynb
@@ -1079,6 +1079,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "#### Alexis' Heatmap\n",
+    "\n",
+    "Generally speaking, we can interpret negativity as frustration and unfulfilled needs. As a result, there\"s a chance to be successful in the restaurant business by satisfying unfulfilled needs, and consequently to do good business. To maximize chances of success, one need to target what most consumers are saying by voting. \n",
+    "Here are our pieces of advice:\n",
+    "1) Their focus should not be on what is appreciated, but on avoiding replicating what is not. That seems be more important.\n",
+    "We see from our findings that consumers appreciate all restaurants in general, with the exception of those that are cheap (in terms of quality) or that don't stand out from the crowd (traditional American cuisine). The focus should therefore be on avoiding those items at the bottom of the rankings. An overall comparison of the heat maps shows that low scores are given to foods that tend to be cheap. These tend to be traditional American cuisine, fast food, pizza and buffets for example.\n",
+    "2) To be successful, they need to assess their risk profile and play strategically with zip codes and set up shop where there's high demand and little supply. This requires additional analysis and domain knowledge."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
