--- a/task_1.ipynb
+++ b/task_1.ipynb
@@ -37,6 +37,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**STUDENT1_ID:** 17306259, Alexis \\\n",
+    "**STUDENT2_ID:** 07817257, Achraf \\\n",
+    "**STUDENT3_ID:** 18329797, Fabian \\\n",
+    "**STUDENT4_ID:** 18807297, Ezgi \\\n",
+    "**STUDENT5_ID:** 13822853, Kyril "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data\n"
    ]
   },
